--- a/views/cart.handlebars
+++ b/views/cart.handlebars
@@ -1,24 +1,40 @@
-{{!-- views/cart.handlebars --}}
+{{!-- Extiende el layout principal --}}
 {{#extend "main"}}
+
   {{#content "title"}}Carrito de Compras{{/content}}
 
   {{#content "body"}}
     <h2>Carrito ID: {{cart._id}}</h2>
+
     {{#if cart.products.length}}
       <ul>
         {{#each cart.products}}
           <li>
             <strong>{{this.product.title}}</strong> - ${{this.product.price}}
             <br>
-            Cantidad: {{this.quantity}}
-            <form action="/api/carts/{{../cart._id}}/products/{{this.product._id}}?_method=delete" method="post" style="display:inline;">
+            Cantidad: 
+            <form action="/api/carts/{{../cart._id}}/products/{{this.product._id}}?_method=PUT" method="POST" style="display:inline;">
+              <input type="number" name="quantity" value="{{this.quantity}}" min="1" style="width:50px;">
+              <button type="submit">Actualizar</button>
+            </form>
+
+            <form action="/api/carts/{{../cart._id}}/products/{{this.product._id}}?_method=DELETE" method="POST" style="display:inline;">
               <button type="submit">Eliminar</button>
             </form>
           </li>
         {{/each}}
       </ul>
+
+      {{!-- Vaciar todo el carrito --}}
+      <form action="/api/carts/{{cart._id}}?_method=DELETE" method="POST">
+        <button type="submit">Vaciar Carrito</button>
+      </form>
+
     {{else}}
       <p>🛒 El carrito está vacío.</p>
     {{/if}}
+
   {{/content}}
+
 {{/extend}}
+
